# ShoppingListBenincasa

./: CMakeLists.txt  Item.cpp  Item.h  List.cpp  List.h  Observer.h  Subject.h  User.cpp  User.h  main.cpp
Test/: CMakeLists.txt  runAllTests.cpp
test/: CMakeLists.txt  ListTest.cpp  UserTest.cpp  runAllTests.cpp
